[project]
name = "comfyui-pymunk"
description = "Pymunk is a easy-to-use pythonic 2d physics library that can be used whenever you need 2d rigid body physics from Python"
version = "1.0.0"
license = "LICENSE"
dependencies = ["pymunk", "pygame"]

[project.urls]
Repository = "https://github.com/chaojie/ComfyUI-Pymunk"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Pymunk"
Icon = ""
